cambio titulo index

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <main>
 
-  <h1 class="tituloIndex tilt-in-right-2">Belia Velas</h1>
+  <h1 class="tituloIndex tilt-in-right-2"> INICIO</h1>
 
      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner  carousel__img">
