modificacion parrafo refill

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <img class="refill__img" src="./img/refill1.PNG" alt="refill">
         <p class="refill__parrafo">Hacemos servicio de refill, si tenes algún envase que te guste mucho podemos rellenarlo 
-                          y convertirlo en una exquisita vela con la fragancia que vos quieras.</p>
+                          y convertirlo en una exquisita vela con la fragancia que quieras.</p>
 
        </div>
     </div>
