cambio parrafo nuestras velas

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
              <img class="nuestrasVelas__img" src="./img/nuestrasVelas.PNG" alt="nuestrasVelas">
              <ul class="nuestrasVelas__parrafo">
-              <li>Son 100% naturales y amigables con el medio ambiente.</li>
+              <li>Son 100% naturales y amigables con el ambiente.</li>
               <li>Son aromáticas.</li>
               <li>Tienen mucha más duración que una vela de parafina.</li>
               <li>Su bajo punto de fusión hace que no produzca hollín, quemando de forma lenta y pareja.</li>
