--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <main>
 
-  <h1 class="tituloIndex tilt-in-right-2"> INICIO</h1>
+  <h1 class="tituloIndex tilt-in-right-2">Belia Velas</h1>
 
      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner  carousel__img">
@@ -94,7 +94,7 @@
 
              <img class="nuestrasVelas__img" src="./img/nuestrasVelas.PNG" alt="nuestrasVelas">
              <ul class="nuestrasVelas__parrafo">
-              <li>Son 100% naturales y amigables con el ambiente.</li>
+              <li>Son 100% naturales y amigables con el medio ambiente.</li>
               <li>Son aromáticas.</li>
               <li>Tienen mucha más duración que una vela de parafina.</li>
               <li>Su bajo punto de fusión hace que no produzca hollín, quemando de forma lenta y pareja.</li>
@@ -111,7 +111,7 @@
 
         <img class="refill__img" src="./img/refill1.PNG" alt="refill">
         <p class="refill__parrafo">Hacemos servicio de refill, si tenes algún envase que te guste mucho podemos rellenarlo 
-                          y convertirlo en una exquisita vela con la fragancia que quieras.</p>
+                          y convertirlo en una exquisita vela con la fragancia que vos quieras.</p>
 
        </div>
     </div>
