--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -48,7 +48,8 @@
               
               <li class="nav-item"><a class="nav-link" href="./views/quehacemos.html">Que Hacemos</a></li>
               <li class="nav-item"><a class="nav-link" href="./views/productos.html">Productos</a></li>
-              <li class="nav-item"><a class="nav-link"  href="./views/contacto.html">Contacto</a></li>
+              <li class="nav-item"><a class="nav-link" href="./views/faq.html">FAQ</a></li>
+              <li class="nav-item"><a class="nav-link" href="./views/contacto.html">Contacto</a></li>
           </ul> 
 
           </div>
