proyecto-final-corregido3

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="container-fluid">
 
-          <img class="img-fluid logo"  src="./img/logo6.png" alt="logo" width="250px">
+          <img class="img-fluid logo"  src="./img/logo6.png" alt="logo">
 
           <button class="navbar-toggler"
                   type="button"
@@ -65,29 +65,36 @@
 
   <h1 class="tituloIndex tilt-in-right-2">Belia Velas</h1>
 
-     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner  carousel__img">
-        <div class="carousel-item active" data-bs-interval="3000">
-          <img src="./img/carusel6.jpg" class="d-block w-100" alt="vela1" >
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="./img/carusel1.jpg" class="d-block w-100" alt="vela2" >
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="./img/carusel2.jpg" class="d-block w-100" alt="vela3">
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="./img/carusel3.jpg" class="d-block w-100" alt="vela4" >
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="./img/carusel4.jpg" class="d-block w-100" alt="vela5" >
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="./img/carusel5.jpg" class="d-block w-100" alt="vela6" >
-        </div>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner  carousel__img">
+      <div class="carousel-item active" data-bs-interval="3000">
+        <img src="./img/carusel6.jpg" class="d-block w-100" alt="vela1" >
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="./img/carusel1.jpg" class="d-block w-100" alt="vela2" >
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="./img/carusel2.jpg" class="d-block w-100" alt="vela3">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="./img/carusel3.jpg" class="d-block w-100" alt="vela4" >
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="./img/carusel4.jpg" class="d-block w-100" alt="vela5" >
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="./img/carusel5.jpg" class="d-block w-100" alt="vela6" >
       </div>
     </div>
-
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
   <div class="container nuestrasVelas">
       <div class="row">
@@ -111,7 +118,7 @@
        <div class="refill__servicios">
 
         <img class="refill__img" src="./img/refill1.PNG" alt="refill">
-        <p class="refill__parrafo">Hacemos servicio de refill, si tenes algún envase que te guste mucho podemos rellenarlo 
+        <p class="refill__parrafo">Hacemos servicio de refill, si tenes algún envase que te guste mucho podemos rellenarlo <br> 
                           y convertirlo en una exquisita vela con la fragancia que vos quieras.</p>
 
        </div>
