--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner  carousel__img">
       <div class="carousel-item active" data-bs-interval="3000">
-        <img src="./img/carusel6.jpg" class="d-block w-100" alt="vela1" >
+        <img src="./img/vela1.jpg" class="d-block w-100" alt="vela1" >
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="./img/carusel1.jpg" class="d-block w-100" alt="vela2" >
+        <img src="./img/vela2.jpg" class="d-block w-100" alt="vela2" >
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="./img/carusel2.jpg" class="d-block w-100" alt="vela3">
+        <img src="./img//vela3.jpg" class="d-block w-100" alt="vela3">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="./img/carusel3.jpg" class="d-block w-100" alt="vela4" >
+        <img src="./img/vela4.jpg" class="d-block w-100" alt="vela4" >
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="./img/carusel4.jpg" class="d-block w-100" alt="vela5" >
+        <img src="./img/vela5.jpg" class="d-block w-100" alt="vela5" >
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="./img/carusel5.jpg" class="d-block w-100" alt="vela6" >
+        <img src="./img/vela6.jpg" class="d-block w-100" alt="vela6" >
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
